--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,32 @@
-# Compiled class file
-*.class
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
 
-# Log file
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea
+.idea/
+*.iml
+*.iws
 *.log
+*.log.gz
 
-# BlueJ files
-*.ctxt
+# Mac
+.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Maven
+log/
+target/
+record/
+recor/
+tts_wav/
+robot_words/
